# coding-interview-university

./: README.md
code/: CMakeLists.txt  flake.nix  main  vector.c
code/.cache/clangd/index/: generic_vector.c.EF8D20C3EC2BB611.idx  main.c.B36F8CDF7D321B9D.idx  main.c.BD3792A847ED3D9C.idx  vector.c.82C2C61DD1D54225.idx  vector.h.7B7C56D8B9603523.idx
code/example/: generic_vector.c
code/include/: vector.h
code/src/: main.c  vector.c
notes/: template.aux  template.fdb_latexmk  template.fls  template.tex  template.toc
